Fixed an error in the year "2018" not showing up due to CSS Y position value being too low.  Removed console logs from resume.js.  Renamed resume.js to index.js.

--- a/css/index.css
+++ b/css/index.css
@@ -595,7 +595,7 @@
 	.zelda-text-year-y-3 { top: 858px; }
 	.zelda-text-year-y-4 { top: 1023px; }
 	.zelda-text-year-y-5 { top: 1123px; }
-	.zelda-text-year-y-6 { top: 296px; }
+	.zelda-text-year-y-6 { top: 1286px; }
 
 
 	/* Image styles. */
